--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "bestseenonfoot",
-  "version": "16.0.0",
+  "version": "17.0.0",
   "private": true,
   "engines": {
-    "node": "^18",
-    "npm": "^9"
+    "node": "^18.12.0",
+    "npm": "^9 || ^10"
   },
   "engineStrict": true,
   "scripts": {
@@ -13,6 +13,7 @@
     "start": "next start",
     "build-and-start": "next build && next start",
     "lint": "next lint",
+    "lint-staged": "lint-staged",
     "mdlint": "markdownlint-cli2 '**/*.md' '#node_modules'",
     "mdlintfix": "markdownlint-cli2-fix '**/*.md' '#node_modules'",
     "typecheck": "tsc",
@@ -20,12 +21,15 @@
     "e2e": "start-server-and-test build-and-start http://localhost:3000 \"cypress open --e2e\"",
     "e2e:headless": "start-server-and-test build-and-start http://localhost:3000 \"cypress run --e2e\"",
     "e2e:playwright": "playwright test",
+    "e2e:playwright:install": "playwright install --with-deps",
     "component": "cypress open --component",
     "component:headless": "cypress run --component",
     "test": "jest --watch",
     "test:ci": "jest --ci --no-watch --no-watchAll",
     "test:vitest": "vitest",
     "test:vitest:ci": "vitest run",
+    "prettier": "prettier --write .",
+    "prettier:check": "prettier --check .",
     "preversion": "prettier --check . && npm run typecheck && npm run lint && npm run mdlint && npm run test:ci && npm run test:vitest:ci && npm run component:headless && npm run e2e:headless && npm run e2e:playwright",
     "version": "npm run build && git add .",
     "postversion": "git push && git push --tags && rm -rf .next"
@@ -35,12 +39,12 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
-    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@next/third-parties": "^14.2.3",
-    "@vercel/analytics": "^1.2.2",
+    "@vercel/analytics": "^1.3.1",
     "@vercel/postgres": "^0.8.0",
     "@vercel/postgres-kysely": "^0.8.0",
-    "@vercel/speed-insights": "^1.0.10",
+    "@vercel/speed-insights": "^1.0.11",
     "classnames": "^2.5.1",
     "date-fns": "^3.6.0",
     "escape-html": "^1.0.3",
@@ -57,44 +61,44 @@
     "react-share-lite": "^1.1.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
-    "sharp": "^0.33.3",
-    "zod": "^3.23.5"
+    "sharp": "^0.33.4",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@playwright/test": "^1.43.1",
+    "@playwright/test": "^1.44.1",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.13",
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^15.0.5",
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^16.0.0",
     "@types/escape-html": "^1.0.4",
     "@types/jest": "^29.5.12",
-    "@types/react": "^18.3.1",
+    "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react": "^4.3.0",
     "autoprefixer": "^10.4.19",
-    "cssnano": "^7.0.1",
-    "cypress": "^13.8.1",
+    "cssnano": "^7.0.2",
+    "cypress": "^13.11.0",
     "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.3",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-cypress": "^3.0.3",
-    "eslint-plugin-markdownlint": "^0.5.0",
+    "eslint-plugin-cypress": "^3.3.0",
+    "eslint-plugin-markdownlint": "^0.6.0",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "jsdom": "^24.0.0",
-    "lint-staged": "^15.2.2",
+    "jsdom": "^24.1.0",
+    "lint-staged": "^15.2.5",
     "markdownlint-cli2": "^0.13.0",
     "postcss": "^8.4.38",
     "postcss-import": "^16.1.0",
-    "prettier": "3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.14",
-    "start-server-and-test": "^2.0.3",
+    "prettier": "3.3.1",
+    "prettier-plugin-tailwindcss": "^0.6.1",
+    "start-server-and-test": "^2.0.4",
     "tailwindcss": "^3.4.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
-    "vitest": "^1.5.3"
+    "vitest": "^1.6.0"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
