--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -47,3 +47,5 @@ jobs:
         run: npm run test:ci
       - name: Vitest Testing
         run: npm run test:vitest:ci
+      - name: Storybook Build
+        run: npm run build-storybook
