--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bestseenonfoot",
-  "version": "17.0.0",
+  "version": "18.0.0",
   "private": true,
   "engines": {
     "node": "^18.12.0",
@@ -30,29 +30,31 @@
     "test:vitest:ci": "vitest run",
     "prettier": "prettier --write .",
     "prettier:check": "prettier --check .",
-    "preversion": "prettier --check . && npm run typecheck && npm run lint && npm run mdlint && npm run test:ci && npm run test:vitest:ci && npm run component:headless && npm run e2e:headless && npm run e2e:playwright",
+    "preversion": "prettier --check . && npm run typecheck && npm run lint && npm run mdlint && npm run test:ci && npm run test:vitest:ci && npm run component:headless && npm run e2e:headless && npm run e2e:playwright && npm run build-storybook",
     "version": "npm run build && git add .",
-    "postversion": "git push && git push --tags && rm -rf .next"
+    "postversion": "git push && git push --tags && rm -rf .next",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.5.2",
-    "@fortawesome/free-brands-svg-icons": "^6.5.2",
-    "@fortawesome/free-regular-svg-icons": "^6.5.2",
-    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@next/third-parties": "^14.2.3",
+    "@next/third-parties": "^14.2.5",
     "@vercel/analytics": "^1.3.1",
-    "@vercel/postgres": "^0.8.0",
-    "@vercel/postgres-kysely": "^0.8.0",
-    "@vercel/speed-insights": "^1.0.11",
+    "@vercel/postgres": "^0.9.0",
+    "@vercel/postgres-kysely": "^0.9.0",
+    "@vercel/speed-insights": "^1.0.12",
     "classnames": "^2.5.1",
     "date-fns": "^3.6.0",
     "escape-html": "^1.0.3",
     "feed": "^4.2.2",
     "fuse.js": "^7.0.0",
     "gray-matter": "^4.0.3",
-    "kysely": "^0.27.3",
-    "next": "^14.2.3",
+    "kysely": "^0.27.4",
+    "next": "^14.2.5",
     "next-pwa": "^5.6.0",
     "react": "^18.3.1",
     "react-cookie-consent": "^9.0.0",
@@ -65,40 +67,51 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@playwright/test": "^1.44.1",
+    "@chromatic-com/storybook": "^1.6.1",
+    "@playwright/test": "^1.45.3",
+    "@storybook/addon-essentials": "^8.2.7",
+    "@storybook/addon-interactions": "^8.2.7",
+    "@storybook/addon-links": "^8.2.7",
+    "@storybook/addon-onboarding": "^8.2.7",
+    "@storybook/blocks": "^8.2.7",
+    "@storybook/nextjs": "^8.2.7",
+    "@storybook/react": "^8.2.7",
+    "@storybook/test": "^8.2.7",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.13",
-    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
     "@types/escape-html": "^1.0.4",
     "@types/jest": "^29.5.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
-    "cssnano": "^7.0.2",
-    "cypress": "^13.11.0",
+    "cssnano": "^7.0.4",
+    "cypress": "^13.13.2",
     "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.3",
+    "eslint-config-next": "^14.2.5",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-cypress": "^3.3.0",
+    "eslint-plugin-cypress": "^3.4.0",
     "eslint-plugin-markdownlint": "^0.6.0",
-    "husky": "^9.0.11",
+    "eslint-plugin-storybook": "^0.8.0",
+    "husky": "^9.1.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "jsdom": "^24.1.0",
-    "lint-staged": "^15.2.5",
+    "jsdom": "^24.1.1",
+    "lint-staged": "^15.2.7",
     "markdownlint-cli2": "^0.13.0",
-    "postcss": "^8.4.38",
+    "postcss": "^8.4.40",
     "postcss-import": "^16.1.0",
-    "prettier": "3.3.1",
-    "prettier-plugin-tailwindcss": "^0.6.1",
-    "start-server-and-test": "^2.0.4",
-    "tailwindcss": "^3.4.3",
+    "prettier": "3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.5",
+    "start-server-and-test": "^2.0.5",
+    "storybook": "^8.2.7",
+    "tailwindcss": "^3.4.7",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5",
-    "vitest": "^1.6.0"
+    "typescript": "^5.5.4",
+    "vitest": "^2.0.5"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
