--- a/package.json
+++ b/package.json
@@ -3,12 +3,22 @@
   "version": "20.0.0",
   "private": true,
   "engines": {
-    "node": "20",
-    "npm": "10"
+    "node": "^22.11.0 || ^20.9.0 || ^18.12.0",
+    "npm": "^10.0.0"
   },
   "engineStrict": true,
+  "devEngines": {
+    "runtime": {
+      "name": "node",
+      "onFail": "error"
+    },
+    "packageManager": {
+      "name": "npm",
+      "onFail": "error"
+    }
+  },
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "build-and-start": "next build && next start",
@@ -42,7 +52,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@next/third-parties": "^14.2.15",
+    "@next/third-parties": "15.0.1",
     "@vercel/analytics": "^1.3.1",
     "@vercel/postgres": "^0.10.0",
     "@vercel/postgres-kysely": "^0.10.0",
@@ -54,11 +64,11 @@
     "fuse.js": "^7.0.0",
     "gray-matter": "^4.0.3",
     "kysely": "^0.27.4",
-    "next": "^14.2.15",
+    "next": "15.0.1",
     "next-pwa": "^5.6.0",
-    "react": "^18.3.1",
+    "react": "19.0.0-rc-69d4b800-20241021",
     "react-cookie-consent": "^9.0.0",
-    "react-dom": "^18.3.1",
+    "react-dom": "19.0.0-rc-69d4b800-20241021",
     "react-markdown": "^9.0.1",
     "react-share-lite": "^1.1.0",
     "remark": "^15.0.1",
@@ -83,15 +93,15 @@
     "@testing-library/react": "^16.0.1",
     "@types/escape-html": "^1.0.4",
     "@types/jest": "^29.5.13",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
     "cssnano": "^7.0.6",
     "cypress": "^13.15.0",
     "dotenv": "^16.4.5",
     "eslint": "^8.57.1",
-    "eslint-config-next": "^14.2.15",
+    "eslint-config-next": "15.0.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-cypress": "^3.6.0",
     "eslint-plugin-markdownlint": "^0.6.0",
@@ -115,6 +125,24 @@
     "vitest": "^2.1.3"
   },
   "lint-staged": {
-    "**/*": "prettier --write --ignore-unknown"
+    "*.md": [
+      "markdownlint-cli2 --cache --fix",
+      "prettier --cache --write --ignore-unknown"
+    ],
+    "*.{css,scss}": [
+      "stylelint --cache --fix",
+      "prettier --cache --write --ignore-unknown"
+    ],
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --cache --fix",
+      "prettier --cache --write --ignore-unknown"
+    ],
+    "!(*.md|*.css|*.scss|*.js|*.jsx|*.ts|*.tsx)": [
+      "prettier --cache --write --ignore-unknown"
+    ]
+  },
+  "overrides": {
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
   }
 }
