--- a/.npmrc
+++ b/.npmrc
@@ -1,6 +1,5 @@
 engine-strict=true
 git-tag-version=false
-# Set false when React 19 is stable
-legacy-peer-deps=false
-# Set false when React 19 is stable
-force=true
+# Set false when everything can use react 19
+legacy-peer-deps=true
+force=false
