--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bestseenonfoot",
-  "version": "21.0.0",
+  "version": "22.0.0",
   "private": true,
   "engines": {
     "node": "^22.11.0 || ^20.9.0 || ^18.12.0",
@@ -47,27 +47,27 @@
     "postversion": "rm -rf .next && rm -rf storybook-static"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.6.0",
-    "@fortawesome/free-brands-svg-icons": "^6.6.0",
-    "@fortawesome/free-regular-svg-icons": "^6.6.0",
-    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.1",
+    "@fortawesome/free-brands-svg-icons": "^6.7.1",
+    "@fortawesome/free-regular-svg-icons": "^6.7.1",
+    "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@next/third-parties": "^15.0.2",
-    "@vercel/analytics": "^1.3.2",
+    "@next/third-parties": "^15.0.4",
+    "@vercel/analytics": "^1.4.1",
     "@vercel/postgres": "^0.10.0",
     "@vercel/postgres-kysely": "^0.10.0",
-    "@vercel/speed-insights": "^1.0.14",
+    "@vercel/speed-insights": "^1.1.0",
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
     "escape-html": "^1.0.3",
     "feed": "^4.2.2",
     "fuse.js": "^7.0.0",
     "gray-matter": "^4.0.3",
-    "kysely": "^0.27.4",
-    "next": "^15.0.2",
-    "react": "19.0.0-rc-69d4b800-20241021",
+    "kysely": "^0.27.5",
+    "next": "^15.0.4",
+    "react": "^19.0.0",
     "react-cookie-consent": "^9.0.0",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react-dom": "^19.0.0",
     "react-markdown": "^9.0.1",
     "react-share-lite": "^1.1.0",
     "remark": "^15.0.1",
@@ -76,58 +76,53 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.0",
-    "@eslint/eslintrc": "^3.1.0",
+    "@chromatic-com/storybook": "^3.2.2",
+    "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.13.0",
-    "@playwright/test": "^1.48.2",
-    "@storybook/addon-essentials": "^8.3.6",
-    "@storybook/addon-interactions": "^8.3.6",
-    "@storybook/addon-links": "^8.3.6",
-    "@storybook/addon-onboarding": "^8.3.6",
+    "@playwright/test": "^1.49.0",
+    "@storybook/addon-essentials": "^8.4.7",
+    "@storybook/addon-interactions": "^8.4.7",
+    "@storybook/addon-links": "^8.4.7",
+    "@storybook/addon-onboarding": "^8.4.7",
     "@storybook/blocks": "^8.2.7",
-    "@storybook/nextjs": "^8.3.6",
+    "@storybook/nextjs": "^8.4.7",
     "@storybook/react": "^8.2.7",
     "@storybook/test": "^8.2.7",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
-    "@testing-library/jest-dom": "^6.6.2",
-    "@testing-library/react": "^16.0.1",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
     "@types/escape-html": "^1.0.4",
     "@types/jest": "^29.5.14",
-    "@types/react": "npm:types-react@19.0.0-rc.1",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
-    "@vitejs/plugin-react": "^4.3.3",
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.1",
+    "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "cssnano": "^7.0.6",
-    "cypress": "^13.15.1",
-    "dotenv": "^16.4.5",
-    "eslint": "^9.13.0",
-    "eslint-config-next": "^15.0.2",
+    "cypress": "^13.16.1",
+    "dotenv": "^16.4.7",
+    "eslint": "^9.16.0",
+    "eslint-config-next": "^15.0.4",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-cypress": "^4.0.0",
+    "eslint-plugin-cypress": "^4.1.0",
     "eslint-plugin-markdownlint": "^0.6.0",
-    "eslint-plugin-storybook": "^0.10.1",
-    "husky": "^9.1.6",
+    "eslint-plugin-storybook": "^0.11.1",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^25.0.1",
     "lint-staged": "^15.2.10",
-    "markdownlint-cli2": "^0.14.0",
-    "postcss": "^8.4.47",
+    "markdownlint-cli2": "^0.16.0",
+    "postcss": "^8.4.49",
     "postcss-import": "^16.1.0",
-    "prettier": "3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.8",
+    "prettier": "3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.9",
     "start-server-and-test": "^2.0.8",
-    "storybook": "^8.3.6",
-    "tailwindcss": "^3.4.14",
+    "storybook": "^8.4.7",
+    "tailwindcss": "^3.4.16",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3",
-    "vercel": "^37.13.0",
-    "vitest": "^2.1.4"
-  },
-  "Remove when React 19 is stable": true,
-  "overrides": {
-    "@types/react": "npm:types-react@19.0.0-rc.1",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
+    "typescript": "^5.7.2",
+    "vercel": "^39.1.3",
+    "vitest": "^2.1.8"
   }
 }
