--- a/package.json
+++ b/package.json
@@ -76,18 +76,19 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.3",
+    "@chromatic-com/storybook": "^3.2.4",
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.13.0",
     "@playwright/test": "^1.49.1",
-    "@storybook/addon-essentials": "^8.4.7",
-    "@storybook/addon-interactions": "^8.4.7",
-    "@storybook/addon-links": "^8.4.7",
-    "@storybook/addon-onboarding": "^8.4.7",
-    "@storybook/blocks": "^8.2.7",
-    "@storybook/nextjs": "^8.4.7",
-    "@storybook/react": "^8.2.7",
-    "@storybook/test": "^8.2.7",
+    "@storybook/addon-essentials": "^8.5.3",
+    "@storybook/addon-interactions": "^8.5.3",
+    "@storybook/addon-links": "^8.5.3",
+    "@storybook/addon-mdx-gfm": "^8.5.3",
+    "@storybook/addon-onboarding": "^8.5.3",
+    "@storybook/blocks": "^8.5.3",
+    "@storybook/nextjs": "^8.5.3",
+    "@storybook/react": "^8.5.3",
+    "@storybook/test": "^8.5.3",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
     "@testing-library/jest-dom": "^6.6.3",
@@ -119,7 +120,7 @@
     "prettier": "3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
     "start-server-and-test": "^2.0.9",
-    "storybook": "^8.4.7",
+    "storybook": "^8.5.3",
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2",
