--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@next/third-parties": "^15.1.3",
+    "@next/third-parties": "15.1.6",
     "@vercel/analytics": "^1.4.1",
     "@vercel/postgres": "^0.10.0",
     "@vercel/postgres-kysely": "^0.10.0",
@@ -61,13 +61,13 @@
     "date-fns": "^4.1.0",
     "escape-html": "^1.0.3",
     "feed": "^4.2.2",
-    "fuse.js": "^7.0.0",
+    "fuse.js": "^7.1.0",
     "gray-matter": "^4.0.3",
     "kysely": "^0.27.5",
-    "next": "^15.1.3",
-    "react": "^19.0.0",
+    "next": "15.1.6",
+    "react": "19.0.0",
     "react-cookie-consent": "^9.0.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "19.0.0",
     "react-markdown": "^9.0.3",
     "react-share-lite": "^1.1.0",
     "remark": "^15.0.1",
@@ -76,54 +76,58 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.3",
+    "@chromatic-com/storybook": "^3.2.4",
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.13.0",
-    "@playwright/test": "^1.49.1",
-    "@storybook/addon-essentials": "^8.4.7",
-    "@storybook/addon-interactions": "^8.4.7",
-    "@storybook/addon-links": "^8.4.7",
-    "@storybook/addon-onboarding": "^8.4.7",
-    "@storybook/blocks": "^8.2.7",
-    "@storybook/nextjs": "^8.4.7",
-    "@storybook/react": "^8.2.7",
-    "@storybook/test": "^8.2.7",
-    "@tailwindcss/forms": "^0.5.9",
-    "@tailwindcss/typography": "^0.5.15",
+    "@playwright/test": "^1.50.1",
+    "@storybook/addon-essentials": "^8.5.3",
+    "@storybook/addon-interactions": "^8.5.3",
+    "@storybook/addon-links": "^8.5.3",
+    "@storybook/addon-mdx-gfm": "^8.5.3",
+    "@storybook/addon-onboarding": "^8.5.3",
+    "@storybook/blocks": "^8.5.3",
+    "@storybook/nextjs": "^8.5.3",
+    "@storybook/react": "^8.5.3",
+    "@storybook/test": "^8.5.3",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/postcss": "^4.0.3",
+    "@tailwindcss/typography": "^0.5.16",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.1.0",
+    "@testing-library/react": "^16.2.0",
     "@types/escape-html": "^1.0.4",
     "@types/jest": "^29.5.14",
-    "@types/react": "^19.0.3",
-    "@types/react-dom": "^19.0.2",
+    "@types/react": "19.0.8",
+    "@types/react-dom": "19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
     "ajv": "^8.17.1",
-    "autoprefixer": "^10.4.20",
     "cssnano": "^7.0.6",
-    "cypress": "^13.17.0",
+    "cypress": "^14.0.1",
     "dotenv": "^16.4.7",
-    "eslint": "^9.17.0",
-    "eslint-config-next": "^15.1.3",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint": "^9.19.0",
+    "eslint-config-next": "15.1.6",
+    "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-cypress": "^4.1.0",
     "eslint-plugin-markdownlint": "^0.6.0",
     "eslint-plugin-storybook": "^0.11.2",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "jsdom": "^25.0.1",
-    "lint-staged": "^15.3.0",
-    "markdownlint-cli2": "^0.17.1",
-    "postcss": "^8.4.49",
-    "postcss-import": "^16.1.0",
+    "jsdom": "^26.0.0",
+    "lint-staged": "^15.4.3",
+    "markdownlint-cli2": "^0.17.2",
+    "postcss": "^8.5.1",
     "prettier": "3.4.2",
-    "prettier-plugin-tailwindcss": "^0.6.9",
-    "start-server-and-test": "^2.0.9",
-    "storybook": "^8.4.7",
-    "tailwindcss": "^3.4.17",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "start-server-and-test": "^2.0.10",
+    "storybook": "^8.5.3",
+    "tailwindcss": "^4.0.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.2",
-    "vercel": "^39.2.5",
-    "vitest": "^2.1.8"
+    "typescript": "^5.7.3",
+    "vercel": "^40.1.0",
+    "vitest": "^3.0.5"
+  },
+  "overrides": {
+    "@types/react": "19.0.8",
+    "@types/react-dom": "19.0.3"
   }
 }
