--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,5 @@
 engine-strict=true
 git-tag-version=false
-# good projects have these set to false: Set false when everything can use react 19
-legacy-peer-deps=true
+# good projects have these set to false
+legacy-peer-deps=false
 force=false
