--- a/package.json
+++ b/package.json
@@ -65,11 +65,11 @@
     "gray-matter": "^4.0.3",
     "kysely": "^0.27.5",
     "next": "15.1.6",
+    "next-share": "^0.27.0",
     "react": "19.0.0",
     "react-cookie-consent": "^9.0.0",
     "react-dom": "19.0.0",
     "react-markdown": "^9.0.3",
-    "react-share-lite": "^1.1.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "sharp": "^0.33.5",
@@ -90,7 +90,7 @@
     "@storybook/react": "^8.5.3",
     "@storybook/test": "^8.5.3",
     "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/postcss": "^4.0.3",
+    "@tailwindcss/postcss": "^4.0.4",
     "@tailwindcss/typography": "^0.5.16",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
@@ -101,7 +101,7 @@
     "@vitejs/plugin-react": "^4.3.4",
     "ajv": "^8.17.1",
     "cssnano": "^7.0.6",
-    "cypress": "^14.0.1",
+    "cypress": "^14.0.2",
     "dotenv": "^16.4.7",
     "eslint": "^9.19.0",
     "eslint-config-next": "15.1.6",
@@ -123,7 +123,7 @@
     "tailwindcss": "^4.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
-    "vercel": "^40.1.0",
+    "vercel": "^41.0.2",
     "vitest": "^3.0.5"
   },
   "overrides": {
