--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -6,6 +6,33 @@ on:
   pull_request:
     branches: ["main"]
 
+env:
+  NEON_PROJECT_ID: ${{ vars.NEON_PROJECT_ID }}
+  NEXT_PUBLIC_FACEBOOK_APP_ID: ${{ vars.NEXT_PUBLIC_FACEBOOK_APP_ID }}
+  NEXT_PUBLIC_FACEBOOK_PIXEL_ID: ${{ vars.NEXT_PUBLIC_FACEBOOK_PIXEL_ID }}
+  NEXT_PUBLIC_GOOGLE_ADS_ID: ${{ vars.NEXT_PUBLIC_GOOGLE_ADS_ID }}
+  NEXT_PUBLIC_GOOGLE_OPTIMIZE_ID: ${{ vars.NEXT_PUBLIC_GOOGLE_OPTIMIZE_ID }}
+  NEXT_PUBLIC_GOOGLE_TAG_MANAGER_ID: ${{ vars.NEXT_PUBLIC_GOOGLE_TAG_MANAGER_ID }}
+  NEXT_PUBLIC_IG_USER: ${{ vars.NEXT_PUBLIC_IG_USER }}
+  NEXT_PUBLIC_SITE_LOGO: ${{ vars.NEXT_PUBLIC_SITE_LOGO }}
+  NEXT_PUBLIC_SITE_URL: ${{ vars.NEXT_PUBLIC_SITE_URL }}
+
+  BLOB_READ_WRITE_TOKEN: ${{ secrets.BLOB_READ_WRITE_TOKEN }}
+  EDGE_CONFIG: ${{ secrets.EDGE_CONFIG }}
+  KV_REST_API_READ_ONLY_TOKEN: ${{ secrets.KV_REST_API_READ_ONLY_TOKEN }}
+  KV_REST_API_TOKEN: ${{ secrets.KV_REST_API_TOKEN }}
+  KV_REST_API_URL: ${{ secrets.KV_REST_API_URL }}
+  KV_URL: ${{ secrets.KV_URL }}
+  NEON_API_KEY: ${{ secrets.NEON_API_KEY }}
+  NEXT_PUBLIC_IG_PSWD: ${{ secrets.NEXT_PUBLIC_IG_PSWD }}
+  POSTGRES_DATABASE: ${{ secrets.POSTGRES_DATABASE }}
+  POSTGRES_HOST: ${{ secrets.POSTGRES_HOST }}
+  POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+  POSTGRES_PRISMA_URL: ${{ secrets.POSTGRES_PRISMA_URL }}
+  POSTGRES_URL: ${{ secrets.POSTGRES_URL }}
+  POSTGRES_URL_NON_POOLING: ${{ secrets.POSTGRES_URL_NON_POOLING }}
+  POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+
 jobs:
   test:
     timeout-minutes: 60
