--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bestseenonfoot",
-  "version": "23.0.0",
+  "version": "24.0.0",
   "private": true,
   "engines": {
     "node": "^22.11.0 || ^20.9.0 || ^18.12.0",
@@ -52,82 +52,82 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@next/third-parties": "15.1.6",
-    "@vercel/analytics": "^1.4.1",
+    "@next/third-parties": "15.2.0",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/postgres": "^0.10.0",
     "@vercel/postgres-kysely": "^0.10.0",
-    "@vercel/speed-insights": "^1.1.0",
+    "@vercel/speed-insights": "^1.2.0",
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
     "escape-html": "^1.0.3",
     "feed": "^4.2.2",
     "fuse.js": "^7.1.0",
     "gray-matter": "^4.0.3",
-    "kysely": "^0.27.5",
-    "next": "15.1.6",
+    "kysely": "^0.27.6",
+    "next": "15.2.0",
     "next-share": "^0.27.0",
     "react": "19.0.0",
     "react-cookie-consent": "^9.0.0",
     "react-dom": "19.0.0",
-    "react-markdown": "^9.0.3",
+    "react-markdown": "^10.0.1",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "sharp": "^0.33.5",
-    "zod": "^3.24.1"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.4",
-    "@eslint/eslintrc": "^3.2.0",
+    "@chromatic-com/storybook": "^3.2.5",
+    "@eslint/eslintrc": "^3.3.0",
     "@eslint/js": "^9.13.0",
     "@playwright/test": "^1.50.1",
-    "@storybook/addon-essentials": "^8.5.3",
-    "@storybook/addon-interactions": "^8.5.3",
-    "@storybook/addon-links": "^8.5.3",
-    "@storybook/addon-mdx-gfm": "^8.5.3",
-    "@storybook/addon-onboarding": "^8.5.3",
-    "@storybook/blocks": "^8.5.3",
-    "@storybook/nextjs": "^8.5.3",
-    "@storybook/react": "^8.5.3",
-    "@storybook/test": "^8.5.3",
+    "@storybook/addon-essentials": "^8.6.3",
+    "@storybook/addon-interactions": "^8.6.3",
+    "@storybook/addon-links": "^8.6.3",
+    "@storybook/addon-mdx-gfm": "^8.6.3",
+    "@storybook/addon-onboarding": "^8.6.3",
+    "@storybook/blocks": "^8.6.3",
+    "@storybook/nextjs": "^8.6.3",
+    "@storybook/react": "^8.6.3",
+    "@storybook/test": "^8.6.3",
     "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/postcss": "^4.0.4",
+    "@tailwindcss/postcss": "^4.0.9",
     "@tailwindcss/typography": "^0.5.16",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@types/escape-html": "^1.0.4",
     "@types/jest": "^29.5.14",
-    "@types/react": "19.0.8",
-    "@types/react-dom": "19.0.3",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "ajv": "^8.17.1",
     "cssnano": "^7.0.6",
-    "cypress": "^14.0.2",
+    "cypress": "^14.1.0",
     "dotenv": "^16.4.7",
-    "eslint": "^9.19.0",
-    "eslint-config-next": "15.1.6",
-    "eslint-config-prettier": "^10.0.1",
+    "eslint": "^9.21.0",
+    "eslint-config-next": "15.2.0",
+    "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-cypress": "^4.1.0",
     "eslint-plugin-markdownlint": "^0.6.0",
-    "eslint-plugin-storybook": "^0.11.2",
+    "eslint-plugin-storybook": "^0.11.3",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^26.0.0",
     "lint-staged": "^15.4.3",
     "markdownlint-cli2": "^0.17.2",
-    "postcss": "^8.5.1",
-    "prettier": "3.4.2",
+    "postcss": "^8.5.3",
+    "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "start-server-and-test": "^2.0.10",
-    "storybook": "^8.5.3",
+    "storybook": "^8.6.3",
     "tailwindcss": "^4.0.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.3",
-    "vercel": "^41.0.2",
-    "vitest": "^3.0.5"
+    "typescript": "~5.7",
+    "vercel": "^41.3.0",
+    "vitest": "^3.0.7"
   },
   "overrides": {
-    "@types/react": "19.0.8",
-    "@types/react-dom": "19.0.3"
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4"
   }
 }
